# bitwatch

./: .gitignore  README.md  bitwatch.example.json  pyproject.toml  setup.py
bitwatch/: __main__.py  alert.py  annotate.py  anomaly.py  archive.py  audit.py  burst.py  cadence.py  cli.py  config.py  cooldown.py  correlation.py  decay.py  dedup.py  drift.py  entropy.py  filter.py  forecast.py  frequency.py  gap.py  heatmap.py  history.py  jitter.py  latency.py  mirror.py  monitor.py  notifier.py  outlier.py  pins.py  profile.py  pulse.py  quota.py  retention.py  rollup.py  schedule.py  scorecard.py  snapshot.py  spike.py  streak.py  throttle.py  (+6 more)
bitwatch/commands/: __init__.py  alert_cmd.py  alert_cmd_parser.py  annotate_cmd.py  annotate_cmd_parser.py  anomaly_cmd.py  anomaly_cmd_parser.py  archive_cmd.py  archive_cmd_parser.py  audit_cmd.py  audit_cmd_parser.py  baseline_cmd.py  burst_cmd.py  burst_cmd_parser.py  cadence_cmd.py  clear_cmd.py  clear_cmd_parser.py  compare_cmd.py  compare_cmd_parser.py  cooldown_cmd.py  cooldown_cmd_parser.py  correlation_cmd.py  correlation_cmd_parser.py  decay_cmd.py  decay_cmd_parser.py  dedup_cmd.py  diff_cmd.py  diff_cmd_parser.py  digest_cmd.py  digest_cmd_parser.py  entropy_cmd.py  entropy_cmd_parser.py  export_cmd.py  forecast_cmd.py  frequency_cmd.py  history_cmd.py  ignore_cmd.py  ignore_cmd_parser.py  init_cmd.py  jitter_cmd.py  (+49 more)
bitwatch/tests/: test_alert.py  test_alert_cmd.py  test_annotate.py  test_annotate_cmd.py  test_anomaly.py  test_anomaly_cmd.py  test_archive.py  test_archive_cmd.py  test_audit_cmd.py  test_burst.py  (+72 more)
